# multiD_hetero_DMFT

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/docker/: Dockerfile
multid_rnn/dataclass/: experiments.py  external_input.py  net_params.py  prob_dist.py  result.py  simulation_params.py
multid_rnn/net/: net.py  power_spectrum.py
multid_rnn/simulation/: trial_scan.py
multid_rnn/utils/: data.py  hdf2py.py  jax_setting.py  json_encoder.py  logging_utils.py  lyap.py  mc.py  name.py  run.py  vis.py  vis_parameter_space.py
scripts/: multi_experiments.py  plot_in_param_space.py  run_1experiment.py
scripts/fig1/: single_neuron_response.ipynb
